--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@ body {
     padding: 50px;
 }
 
-.index {
+.developer {
     background-color: #222;
     padding: 20px;
     border-radius: 10px;
@@ -21,7 +21,7 @@ body {
     box-shadow: 0 0 7px rgb(77, 169, 205);
 }
 
-.index img {
+.developer img {
     width: 150px;
     height: 150px;
     border-radius: 50%;
@@ -111,7 +111,7 @@ li:hover{
         padding: 20px;
     }
 
-    .index {
+    .developer {
         width: 80%;
         margin-bottom: 20px;
     }
@@ -142,7 +142,7 @@ li:hover{
 }
 
 @media screen and (max-width: 480px) {
-    .index img {
+    .developer img {
         width: 100px;
         height: 100px;
     }
@@ -159,4 +159,5 @@ li:hover{
         padding: 5px 15px;
     }
 }
+
 
